--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: black;
+  background: white;
 }
 body header {
   width: 100%;
@@ -38,7 +38,7 @@ body main div {
   width: 80%;
   padding: 4rem;
   text-align: center;
-  background-color: #353535;
+  background-color: #fafafa;
   border-radius: 75px 0 75px 0;
   box-shadow: inset 2px 2px 5px steelblue;
 }
