--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background: black;
+    background: rgb(255, 255, 255);
     header{
         width: 100%;
         background-color: $colorprimary;
